# influxdb3_core

./: .gitignore  Cargo.lock.backup  Cargo.lock.backup3  Cargo.toml  deny.toml  sync-core.sh
.circleci/: config.yml
arrow_util/: Cargo.toml
arrow_util/src/: bitset.rs  dictionary.rs  lib.rs  parquet_meta.rs  string.rs  test_util.rs  util.rs
authz/: Cargo.toml
authz/src/: authorizer.rs  instrumentation.rs  iox_authorizer.rs  lib.rs  permission.rs
catalog_cache/: Cargo.toml
catalog_cache/benches/: list_encode.rs
catalog_cache/src/: lib.rs
catalog_cache/src/api/: client.rs  list.rs  mod.rs  quorum.rs  server.rs
catalog_cache/src/local/: limit.rs  mod.rs
clap_blocks/: Cargo.toml
clap_blocks/src/: auth.rs  bulk_ingest.rs  catalog_cache.rs  catalog_dsn.rs  compactor.rs  compactor_scheduler.rs  controller.rs  garbage_collector.rs  gossip.rs  ingester.rs  ingester_address.rs  lib.rs  object_store.rs  object_store_cache.rs  parquet_cache.rs  parquet_write_hint.rs  querier.rs  router.rs  run_config.rs  socket_addr.rs  tokio.rs  tokio_main.rs
client_util/: Cargo.toml
client_util/src/: connection.rs  lib.rs
error_reporting/: Cargo.toml
error_reporting/src/: lib.rs
executor/: Cargo.toml
executor/src/: io.rs  lib.rs
flightsql/: Cargo.toml
flightsql/src/: cmd.rs  error.rs  lib.rs  planner.rs
flightsql/src/sql_info/: mod.rs
garbage_collector/: Cargo.toml
garbage_collector/src/: catalog_backups.rs  lib.rs  test_utils.rs
garbage_collector/src/objectstore/: checker.rs  deleter.rs  lister.rs
garbage_collector/src/parquetfile/: deleter.rs
garbage_collector/src/retention/: flagger.rs  mod.rs  parquet.rs  partition.rs
garbage_collector/tests/: all_states.rs
generated_types/: Cargo.toml  build.rs
generated_types/src/: google.rs  lib.rs
influxdb_influxql_parser/: Cargo.toml
influxdb_influxql_parser/src/: common.rs  create.rs  delete.rs  drop.rs  explain.rs  identifier.rs  internal.rs  keywords.rs  lib.rs  literal.rs  parameter.rs  select.rs  show.rs  show_field_keys.rs  show_measurements.rs  show_retention_policies.rs  show_tag_keys.rs  show_tag_values.rs  simple_from_clause.rs  statement.rs  string.rs  time_range.rs  visit.rs  visit_mut.rs
influxdb_influxql_parser/src/expression/: arithmetic.rs  conditional.rs  walk.rs
influxdb_iox_client/: Cargo.toml
influxdb_iox_client/src/: client.rs  format.rs  lib.rs
influxdb_iox_client/src/client/: catalog.rs  error.rs  flightsql.rs  namespace.rs  query_log.rs  reflection.rs  schema.rs  store.rs  table.rs  write.rs
influxdb_iox_client/src/format/: influxql.rs
influxdb_line_protocol/: Cargo.toml  RELEASE.md
influxdb_line_protocol/fuzz/: Cargo.toml
influxdb_line_protocol/src/: builder.rs  lib.rs  v3.rs
influxdb_line_protocol/src/v3/: mod.rs
influxdb_line_protocol/src/v4/: mod.rs
iox_catalog/: Cargo.toml  README.md
iox_catalog/benches/: quorum.rs
iox_catalog/migrations/: 20240118105541_add_router_versioning_for_namespace_metadata.sql  20240215121925_add_namespace_generation.sql  20240216103737_add_cold_compact_at.sql  20240219123135_add_root_generation.sql  20240326121420_remove-kafka-catalog-tables.sql  20240327112927_remove_sequence_number_references.sql  20240327275522_modify_trigger_new_file_at.sql  20240426152919_parquet_file_source_field_only.sql  20240625000000_parquet_file_partition_id.sql  20240625000001_parquet_file_drop_partition_delete_id.sql  20240724000000_billing_summary_drop.sql  20240724144900_index_parquet_file_created_at.sql  20240904141539_remove_set_partition_id_trigger.sql  20240930221800_remove_new_file_at_trigger.sql  20241002153430_add_created_at_to_partition.sql  20241031150945_remove_unused_parquet_file_created_at_index.sql  20250212093234_clean_up_kafka.sql  20250226114300_table_deleted_at.sql  20250321101805_namespace_name_unique_by_deleted_at.sql
iox_catalog/sqlite/migrations/: 20240118105541_add_router_versioning_for_namespace_metadata.sql  20240215121925_add_namespace_generation.sql  (+13 more)
iox_catalog/src/: constants.rs  fault_injection.rs  interface.rs  interface_tests.rs  lib.rs  mem.rs  metrics.rs  migrate.rs  pagination.rs  postgres.rs  sorting.rs  sqlite.rs  test_helpers.rs  util.rs  util_serialization.rs
iox_http/: Cargo.toml
iox_http/src/: lib.rs  write.rs
iox_http_util/: Cargo.toml
iox_http_util/src/: lib.rs
iox_query/: Cargo.toml
iox_query/benches/: deduplicate.rs
iox_query/src/: chunk_statistics.rs  config.rs  exec.rs  extension.rs  frontend.rs  ingester.rs  lib.rs  memory_pool.rs  plan.rs  provider.rs  pruning.rs  pruning_oracle.rs  query_log.rs  statistics.rs  test.rs  util.rs
iox_query_influxrpc/: Cargo.toml
iox_query_influxrpc/src/: error.rs  exec.rs  extension.rs  extension_planner.rs  lib.rs  missing_columns.rs  physical_optimizer.rs  plan.rs  planner.rs  scan_plan.rs  schema.rs
iox_system_tables/: Cargo.toml
iox_system_tables/src/: lib.rs  system_tables.rs
ioxd_common/: Cargo.toml
ioxd_common/src/: lib.rs  rpc.rs  server_type.rs  service.rs
kube_test/: Cargo.toml
kube_test/src/: lib.rs  resource_handler.rs
logfmt/: Cargo.toml
logfmt/src/: lib.rs
logfmt/tests/: logging.rs
meta_data_cache/: Cargo.toml
meta_data_cache/src/: lib.rs
mutable_batch/: Cargo.toml
mutable_batch/src/: column.rs  lib.rs  writer.rs
mutable_batch/tests/: extend.rs  extend_range.rs  writer.rs  writer_drop.rs  writer_fuzz.rs
object_store_mem_cache/: Cargo.toml
object_store_mem_cache/benches/: s3_fifo_concurrency.rs
object_store_mem_cache/src/: attributes.rs  lib.rs  meta_store.rs  object_store_cache_tests.rs  object_store_helpers.rs  store.rs
object_store_metrics/: Cargo.toml
object_store_metrics/src/: async_writer_metrics.rs  cache_metrics.rs  cache_state.rs  dummy.rs  lib.rs  log.rs  metrics.rs  multipart_upload.rs  multipart_upload_metrics.rs  stream.rs
object_store_mock/: Cargo.toml
object_store_mock/src/: lib.rs
object_store_size_hinting/: Cargo.toml
object_store_size_hinting/src/: lib.rs
parquet_cache/: Cargo.toml
parquet_cache/src/: client.rs  controller.rs  data_types.rs  lib.rs  server.rs  tests.rs
(+501 files in other folders)
