[workspace]
# In alphabetical order
members = [
    "arrow_util",
    "authz",
    "backoff",
    "catalog_cache",
    "client_util",
    "data_types",
    "datafusion_util",
    "error_reporting",
    "executor",
    "flightsql",
    "futures_test_utils",
    "generated_types",
    "influxdb_influxql_parser",
    "influxdb_iox_client",
    "influxdb_line_protocol",
    "influxdb2_client",
    "ingester_query_grpc",
    "iox_http",
    "iox_http_util",
    "iox_query",
    "iox_query_influxql",
    "iox_query_influxql_rewrite",
    "iox_query_params",
    "iox_query_udf",
    "iox_system_tables",
    "iox_time",
    "iox_v1_query_api",
    "jemalloc_stats",
    "linear_buffer",
    "logfmt",
    "meta_data_cache",
    "metric",
    "metric_exporters",
    "mutable_batch",
    "mutable_batch_lp",
    "mutable_batch_lp/fuzz",
    "object_store_mem_cache",
    "object_store_metrics",
    "object_store_mock",
    "object_store_size_hinting",
    "observability_deps",
    "panic_logging",
    "parquet_file",
    "partition",
    "predicate",
    "query_functions",
    "schema",
    "service_common",
    "service_grpc_flight",
    "sharder",
    "test_helpers",
    "test_helpers_authz",
    "tokio_metrics_bridge",
    "tokio_watchdog",
    "tower_trailer",
    "trace",
    "trace_exporters",
    "trace_http",
    "tracker",
    "trogging",
    "workspace-hack",
]

resolver = "2"

exclude = [
    "*.md",
    "*.txt",
    ".git*",
    ".github/",
    "LICENSE*",
    "massif.out.*",
    "test_bench/",
    "test_fixtures/",
]

[workspace.package]
version = "0.1.0"
authors = ["IOx Project Developers"]
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# If you want to use a local checkout of arrow, see the commented-out "Patching Arrow" section below
arrow = { version = "56.2.0", features = ["prettyprint", "chrono-tz"] }
arrow-buffer = { version = "56.2.0" }
arrow-flight = { version = "56.2.0", features = ["flight-sql-experimental"] }
arrow-ipc = { version = "56.2.0" }
arrow-schema = { version = "56.2.0" }
bincode = { version = "2", default-features = false, features = ["alloc", "derive"] }
comfy-table = { version = "7.1.0" }
datafusion = { version = "50.3.0" }
datafusion-proto = { version = "50.3.0" }
hashbrown = { version = "0.14.5" }
http = { version = "1" }
http-body = { version = "1" }
http-body-util = { version = "0.1" }
hyper = { version = "1" }
hyper-util = { version = "0.1" }
object_store = { version = "0.12.4", features = ["aws", "azure", "gcp"] }
parquet = { version = "56.2.0", features = ["object_store"] }
pbjson = { version = "0.9" }
pbjson-build = { version = "0.9" }
pbjson-types = { version = "0.7" }
proptest = { version = "1", default-features = false, features = ["std"] }
prost = { version = "0.13" }
prost-build = { version = "0.13" }
prost-types = { version = "0.13" }
reqwest = { version = "0.12", default-features = false }
rstest = { version = "0.26" }
# NOTE(tjh): explicitly add sqlite feature as the `data_types` crate relies on it
sqlx = { version = "0.8.6", features = ["sqlite"] }
tonic = { version = "0.13" }
tonic-build = { version = "0.13" }
tonic-health = { version = "0.13" }
tonic-reflection = { version = "0.13" }
tower = { version = "0.5" }
tracing = { version = "0.1", features = ["log", "max_level_trace"] }
tracing-log = { version = "0.2" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "parking_lot"] }

# unify features between workspace-hack members and packages that are excluded from this hack
smallvec = { version = "1.15.1", features = ["union"] }

datafusion-udf-wasm-host = { git = "https://github.com/influxdata/datafusion-udf-wasm.git", rev = "9b2243ad3305ca3e29af38e8cc9097cb853f1fce", default-features = false }
datafusion-udf-wasm-query = { git = "https://github.com/influxdata/datafusion-udf-wasm.git", rev = "9b2243ad3305ca3e29af38e8cc9097cb853f1fce" }

[workspace.lints.rust]
missing_copy_implementations = "deny"
missing_debug_implementations = "deny"
rust_2018_idioms = { level = "deny", priority = -1 }
unexpected_cfgs = { level = "deny", check-cfg = ['cfg(tokio_unstable)'] }
unreachable_pub = "deny"
unused_crate_dependencies = "deny"

[workspace.lints.clippy]
clone_on_ref_ptr = "deny"
dbg_macro = "deny"
explicit_iter_loop = "deny"
future_not_send = "deny"
todo = "deny"
use_self = "deny"
allow_attributes = "warn"

[workspace.lints.rustdoc]
bare_urls = "deny"
broken_intra_doc_links = "deny"
private_intra_doc_links = "allow"

# This profile optimizes for runtime performance and small binary size at the expense of longer
# build times. It's most suitable for final release builds.
[profile.release]
codegen-units = 16
debug = true
lto = "thin"

[profile.bench]
debug = true

# avoid rebuilds of build dependencies
# See https://github.com/rust-lang/cargo/pull/11252
[profile.dev.build-override]
debug = true

# This profile optimizes for short build times at the expense of larger binary size and slower
# runtime performance. It's most suitable for development iterations.
[profile.quick-release]
inherits = "release"
codegen-units = 16
lto = false
incremental = true

[profile.dev.package]
# Per insta docs: https://insta.rs/docs/quickstart/#optional-faster-runs
insta.opt-level = 3
similar.opt-level = 3

[patch.crates-io]
# Use DataFusion fork
# See https://github.com/influxdata/arrow-datafusion/pull/88 for contents
#
# NOTE: This is an incomplete list of datafusion dependencies, but enough to get all dependencies to use our forked
#       version. Should you ever encounter a `datafusion-*` crate that is duplicated (i.e. `Cargo.lock` lists both the
#       crates.io release and our fork), just add it to this list here.
datafusion = { git = "https://github.com/influxdata/arrow-datafusion.git", rev = "5f35b8287ea793772c7d89d412908af84af0d901" }
datafusion-common = { git = "https://github.com/influxdata/arrow-datafusion.git", rev = "5f35b8287ea793772c7d89d412908af84af0d901" }
datafusion-execution = { git = "https://github.com/influxdata/arrow-datafusion.git", rev = "5f35b8287ea793772c7d89d412908af84af0d901" }
datafusion-expr = { git = "https://github.com/influxdata/arrow-datafusion.git", rev = "5f35b8287ea793772c7d89d412908af84af0d901" }
datafusion-proto = { git = "https://github.com/influxdata/arrow-datafusion.git", rev = "5f35b8287ea793772c7d89d412908af84af0d901" }
datafusion-sql = { git = "https://github.com/influxdata/arrow-datafusion.git", rev = "5f35b8287ea793772c7d89d412908af84af0d901" }

# Patching Arrow
#
# Assuming you have a local checkout of Arrow in a directory alongside your local checkout of influxdb3_core,
# and you have changes to Arrow in your local checkout that you want to test out with influxdb3_core,
# uncomment this `[patch.crates-io]` section to tell Cargo to use your local arrow versions for all
# transitive dependencies. The entries for the `arrow-*` crates are needed because `datafusion` has
# a direct dependency on them.
#
# WARNING: Do not merge in a PR uncommenting this change! This is for local testing only!
#
# [patch.crates-io]
# arrow = { path = "../arrow-rs/arrow" }
# parquet = { path = "../arrow-rs/parquet" }
# arrow-array = { path = "../arrow-rs/arrow-array" }
# arrow-schema = { path = "../arrow-rs/arrow-schema" }
# arrow-data = { path = "../arrow-rs/arrow-data" }
# arrow-buffer = { path = "../arrow-rs/arrow-buffer" }
# arrow-ipc = { path = "../arrow-rs/arrow-ipc" }
