[package]
name = "arrow_util"
description = "Apache Arrow utilities"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
ahash = { version = "0.8", default-features = false, features = [
    "runtime-rng",
] }
arrow = { workspace = true }
arrow-ipc = { workspace = true }
base64 = "0.22"
# used by arrow anyway (needed for printing workaround)
chrono = { version = "0.4", default-features = false }
comfy-table = { version = "7.2", default-features = false }
hashbrown = { workspace = true }
num-traits = "0.2"
parquet = { workspace = true }
regex = "1.11.2"
snafu = "0.8"
uuid = "1"


[dev-dependencies]
datafusion = { workspace = true }
proptest = { workspace = true }
rand = "0.9.2"
