[package]
name = "authz"
description = "Interface to authorization checking services"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
backoff = { path = "../backoff" }
http = {workspace = true, optional = true }
iox_time = { version = "0.1.0", path = "../iox_time" }
generated_types = { path = "../generated_types" }
metric = { version = "0.1.0", path = "../metric" }
observability_deps = { path = "../observability_deps" }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

# crates.io dependencies in alphabetical order.
async-trait = "0.1"
base64 = "0.22.1"
snafu = "0.8"
tonic = { workspace = true }

[dev-dependencies]
assert_matches = "1.5.0"
parking_lot = "0.12.3"
paste = "1.0.15"
test_helpers_authz = { path = "../test_helpers_authz" }
tokio = "1.44.1"

[features]
http = ["dep:http"]
