[package]
name = "catalog_cache"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
bytes = "1.8"
dashmap = "6.1.0"
futures = "0.3"
generated_types = { path = "../generated_types" }
hyper = { workspace = true }
observability_deps = { path = "../observability_deps" }
reqwest = { workspace = true }
snafu = "0.8"
tokio = { version = "1.41", default-features = false, features = ["macros", "rt"] }
tokio-util = "0.7"
url = "2.5"
workspace-hack = { version = "0.1", path = "../workspace-hack" }
metric = { path = "../metric" }

[dev-dependencies]
