[package]
name = "clap_blocks"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env", "string"] }
ed25519-dalek = { version = "2", features = ["pem"] }
http = { workspace = true }
# object store crate uses new version of http crate
http_1 = { version = "1.1", package = "http" }
humantime = "2.1.0"
iox_catalog = { path = "../iox_catalog" }
iox_time = { path = "../iox_time" }
itertools = "0.13.0"
metric = { path = "../metric" }
non-empty-string = "0.2.5"
object_store = { workspace = true }
observability_deps = { path = "../observability_deps" }
paste = "1.0.15"
snafu = "0.8"
sysinfo = "0.33.0"
tokio = { version = "1.42", features = ["rt-multi-thread"] }
trace_exporters = { path = "../trace_exporters" }
trogging = { path = "../trogging", default-features = false, features = ["clap"] }
url = "2.5"
workspace-hack = { version = "0.1", path = "../workspace-hack" }

# use libc on unix like platforms to set worker priority of the tokio runtime workers
[target."cfg(unix)".dependencies.libc]
version = "0.2"

[dev-dependencies]
tempfile = "3.14.0"
test_helpers = { path = "../test_helpers" }
futures = "0.3.31"

[features]
azure = ["object_store/azure"] # Optional Azure Object store support
gcp = ["object_store/gcp"] # Optional GCP object store support
aws = ["object_store/aws"] # Optional AWS / S3 object store support
jemalloc = [] # Provide jemalloc-specific config options.
