[package]
name = "clap_blocks"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = "0.1"
aws-config = "1.6.2"
aws-sdk-s3 = { version = "1.85.0", features = ["rustls"] }
aws-sdk-sts = "1.68.0"
clap = { version = "4", features = ["derive", "env", "string"] }
ed25519-dalek = { version = "2", features = ["pem"] }
http = { workspace = true }
humantime = "2.2.0"
iox_catalog = { path = "../iox_catalog" }
iox_time = { path = "../iox_time" }
itertools = "0.13.0"
metric = { path = "../metric" }
non-empty-string = "0.2.6"
object_store = { workspace = true }
object_store_size_hinting = { path = "../object_store_size_hinting" }
observability_deps = { path = "../observability_deps" }
paste = "1.0.15"
snafu = "0.8"
# Delaying upgrade until <https://github.com/GuillaumeGomez/sysinfo/issues/1496> is fixed
sysinfo = "<0.36"
tokio = { version = "1.45", features = ["rt-multi-thread"] }
trace_exporters = { path = "../trace_exporters" }
trogging = { path = "../trogging", default-features = false, features = ["clap"] }
url = "2.5"
workspace-hack = { version = "0.1", path = "../workspace-hack" }

# use libc on unix like platforms to set worker priority of the tokio runtime workers
[target."cfg(unix)".dependencies.libc]
version = "0.2"

[dev-dependencies]
tempfile = "3.20.0"
test_helpers = { path = "../test_helpers" }
futures = "0.3.31"

[features]
jemalloc = [] # Provide jemalloc-specific config options.
