[package]
name = "client_util"
description = "Shared code for IOx clients"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
http = { workspace = true }
reqwest = { workspace = true, features = ["stream", "rustls-tls-native-roots"] }
thiserror = "2.0.12"
tonic = { version = "0.12", features = ["tls", "tls-roots"] }
tower = { workspace = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
tokio = { version = "1.45", features = ["macros", "parking_lot", "rt-multi-thread"] }
mockito = { version = "1.7", default-features = false }
