[package]
name = "client_util"
description = "Shared code for IOx clients"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
http = { workspace = true }
iox_http_util = { path = "../iox_http_util" }
reqwest = { workspace = true, features = ["stream", "rustls-tls-native-roots"] }
# This direct dependency on rustls can probably be removed when tonic is upgraded to 0.13+.
# See <https://github.com/influxdata/influxdb_iox/issues/14683> for more details.
rustls = { version = "0.23", default-features = false }
thiserror = "2.0.16"
tonic = { version = "0.12", features = ["gzip", "tls", "tls-native-roots", "zstd"] }
tower = { workspace = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
tokio = { version = "1.47", features = [
    "macros",
    "parking_lot",
    "rt-multi-thread",
] }
mockito = { version = "1.7", default-features = false }
