[package]
name = "error_reporting"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies] # In alphabetical order
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
datafusion = { workspace = true }
snafu = "0.8"
