[package]
name = "executor"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
futures = "0.3"
metric = { path = "../metric" }
observability_deps = { path = "../observability_deps" }
once_cell = { version = "1.19", features = ["parking_lot"] }
parking_lot = "0.12"
pin-project = "1.1"
snafu = "0.8"
tokio = { version = "1.37" }
tokio-util = { version = "0.7.11" }
tokio_metrics_bridge = { path = "../tokio_metrics_bridge" }
tokio_watchdog = { path = "../tokio_watchdog" }
workspace-hack = { version = "0.1", path = "../workspace-hack" }
