[package]
name = "executor"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
futures = "0.3"
metric = { path = "../metric" }
observability_deps = { path = "../observability_deps" }
parking_lot = "0.12"
snafu = "0.8"
tokio = { version = "1.38" }
tokio_metrics_bridge = { path = "../tokio_metrics_bridge" }
tokio_watchdog = { path = "../tokio_watchdog" }
workspace-hack = { version = "0.1", path = "../workspace-hack" }
