[package]
name = "flightsql"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
arrow = { workspace = true }
arrow-flight = { workspace = true }
arrow_util = { path = "../arrow_util" }
datafusion = { workspace = true }
generated_types = { path = "../generated_types" }
observability_deps = { path = "../observability_deps" }
iox_query = { path = "../iox_query" }
iox_query_params = { path = "../iox_query_params/" }
# Crates.io dependencies, in alphabetical order
bytes = "1.5"
snafu = "0.8"
once_cell = { version = "1", default-features = false }
prost = { workspace = true }
workspace-hack = { version = "0.1", path = "../workspace-hack" }
