[package]
name = "garbage_collector"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
catalog_backup_file_list = { path = "../catalog_backup_file_list" }
chrono = { version = "0.4", default-features = false }
clap = { version = "4", features = ["derive", "env"] }
clap_blocks = { path = "../clap_blocks" }
data_types = { path = "../data_types" }
futures = "0.3"
humantime = "2.1.0"
iox_catalog = { path = "../iox_catalog" }
object_store = { workspace = true }
observability_deps = { path = "../observability_deps" }
snafu = "0.8"
tokio = { version = "1", features = ["macros", "rt", "sync"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7.12" }
uuid = { version = "1", features = ["v4"] }
workspace-hack = { version = "0.1", path = "../workspace-hack" }
metric = { path = "../metric" }

[dev-dependencies]
async-trait = "0.1"
bytes = "1.7"
data_types = { path = "../data_types" }
filetime = "0.2"
iox_time = { path = "../iox_time" }
metric = { path = "../metric" }
parquet_file = { path = "../parquet_file" }
paste = "1.0.15"
service_grpc_bulk_ingest = { path = "../service_grpc_bulk_ingest" }
tempfile = "3"
