[package]
name = "generated_types"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies] # In alphabetical order
observability_deps = { path = "../observability_deps" }
once_cell = { version = "1" }
pbjson = { workspace = true }
pbjson-types = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
tonic = { workspace = true }
uuid = { version = "1" }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
bytes = "1.6"

[build-dependencies] # In alphabetical order
tonic-build = { workspace = true }
prost-build = { workspace = true }
pbjson-build = { workspace = true }
