[package]
name = "generated_types"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies] # In alphabetical order
pbjson = { workspace = true }
pbjson-types = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
tonic = { version = "0.12", features = ["gzip", "tls", "tls-roots", "zstd"] }
tracing = { workspace = true }
uuid = { version = "1" }


[dev-dependencies]
bytes = "1.10"

[build-dependencies] # In alphabetical order
tonic-build = { version = "0.12" }
prost-build = { workspace = true }
pbjson-build = { workspace = true }
